test/conformance/chainsaw/generate/validation/clusterpolicy/target-namespace-scope/chainsaw-step-01-apply-1-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
  name: kyverno:background-controller:manage-ns-crossplane-role
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - create
  - update
  - delete
  - get
- apiGroups:
  - iam.aws.crossplane.io
  resources:
  - roles
  verbs:
  - list
  - get
- apiGroups:
  - rbac.authorization.k8s.io
  resources:
  - roles
  verbs:
  - list
  - get
- apiGroups:
  - kyverno.io
  resources:
  - clustercleanuppolicies
  verbs:
  - create
  - update
  - delete
  - get
  - patch
