test/conformance/chainsaw/generate/validation/clusterpolicy/target-namespace-scope/policy-pass-2-no-ns-cluster-target.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: target-namespace-scope-pass-1
spec:
  generateExisting: true
  rules:
    - generate:
        apiVersion: iam.aws.crossplane.io/v1beta1
        data:
          rules:
            - verbs:
                - "*"
              apiGroups:
                - "*"
              resources:
                - "*"
        kind: Role
        name: superuser
        synchronize: true
      match:
        any:
          - resources:
              kinds:
                - Namespace
              names:
                - dev-*
      name: role-per-namespace
