test/conformance/chainsaw/generate/validation/clusterpolicy/target-namespace-scope/02-check.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: check
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: policy-fail-1-no-ns-namespaced-target.yaml
  - apply:
      check:
        ($error != null): true
      file: policy-fail-2-ns-cluster-target.yaml
  - apply:
      file: policy-pass-1-ns-namespaced-target.yaml
  - apply:
      file: policy-pass-2-no-ns-cluster-target.yaml
  - apply:
      file: policy-pass-3.yaml
