test/conformance/chainsaw/generate/validation/clusterpolicy/target-namespace-scope/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: target-namespace-scope
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2-1.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-fail-1-no-ns-namespaced-target.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-fail-2-ns-cluster-target.yaml
    - apply:
        file: policy-pass-1-ns-namespaced-target.yaml
    - apply:
        file: policy-pass-2-no-ns-cluster-target.yaml
    - apply:
        file: policy-pass-3.yaml
